<resources>
    <string name="app_name">TopperChat</string>
    <string name="toast_network_error">服务器繁忙，请稍后重试</string>
    <string name="email">电邮</string>
    <string name="password">密码</string>
    <string name="et_emily">请输入电邮</string>
    <string name="et_password">请输入密码</string>
    <string name="find_password">忘记密码</string>
    <string name="et_captcha">输入图形验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="send_regcode">发送验证码</string>
    <string name="et_username">请输入用户名</string>
    <string name="et_vcode">输入验证码</string>
    <string name="agreement">同意服务协议</string>
    <string name="submit">提交</string>
    <string name="add">添加</string>
    <string name="toast_email">电邮号不能为空</string>
    <string name="toast_password">密码不能为空</string>
    <string name="toast_captcha">图形验证码不能为空</string>
    <string name="toast_vcode">验证码不能为空</string>
    <string name="toast_agreement">请同意服务协议</string>
    <string name="toast_succeed">登录成功</string>
    <string name="toast_pay_password">PIN密码不能为空</string>
    <string name="talk">聊天</string>
    <string name="trade">交易</string>
    <string name="exchange">兑换</string>
    <string name="person">我的</string>
    <string name="toast_selector">选择了</string>
    <string name="toast_inconvertibility">不能兑换同种货币</string>
    <string name="toast_count">数量不能为空</string>
    <string name="toast_exchange">兑换成功</string>
    <string name="pocket">钱包</string>
    <string name="total_assets">全部资产</string>
    <string name="total_coins">全部币种</string>
    <string name="conversion">兑换</string>
    <string name="total_exchange">全部兑换</string>
    <string name="et_count">请输入数量</string>
    <string name="buy">购买</string>
    <string name="sell">出售</string>
    <string name="coins">币种</string>
    <string name="receive">收到</string>
    <string name="send">发送</string>
    <string name="coin_address">您当前货币地址</string>
    <string name="transaction_history">交易记录</string>
    <string name="refresh">刷新</string>
    <string name="address">地址</string>
    <string name="amount">货币数量</string>
    <string name="payment_password">PIN密码</string>
    <string name="et_coin_address">输入货币地址</string>
    <string name="confirm_send">确认发送</string>
    <string name="et_memo">输入备注</string>
    <string name="add_friend_setting">添加好友设置</string>
    <string name="nickname">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="dynamic">动态</string>
    <string name="qr_code">二维码</string>
    <string name="group_chat">群聊</string>
    <string name="all_address">全部地址</string>
    <string name="hint">点击可复制</string>
    <string name="add_new_address">添加新地址</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="bank_card_binding">银行卡绑定</string>
    <string name="fill_card_number">填写卡号</string>
    <string name="cardholder_name">持卡人姓名</string>
    <string name="id_card_number">身份证号码</string>
    <string name="bank_card_number">银行卡卡号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="bank_reserved_email">电邮号码</string>
    <string name="next_step">下一步</string>
    <string name="finish_binding">完成绑定</string>
    <string name="binding_finish">绑定完成</string>
    <string name="toast_copy">复制成功</string>
    <string name="add_site">添加地址</string>
    <string name="preserve">保存</string>
    <string name="toast_address">地址不能为空</string>
    <string name="progress_dialog_loading">加载中...</string>
    <string name="cancel">取消</string>
    <string name="friend">好友</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="signature">签名</string>
    <string name="my_dynamic">我的动态</string>
    <string name="my_address">我的资产</string>
    <string name="authentication">身份验证</string>
    <string name="about_us">关于我们</string>
    <string name="system_set">系统设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="edit">编辑</string>
    <string name="ta_dynamic">Ta的动态</string>
    <string name="regard_ta">关于Ta</string>
    <string name="finish">完成</string>
    <string name="selected_currency">币种</string>
    <string name="state">国家</string>
    <string name="personal_details">个人信息</string>
    <string name="head_portrait">头像</string>
    <string name="gender">性别</string>
    <string name="region">地区</string>
    <string name="transfer_accounts">转账</string>
    <string name="already_followed">已关注</string>
    <string name="buy_title">发布购买信息</string>
    <string name="sell_title">发布卖出信息</string>
    <string name="selector_state">选择国家</string>
    <string name="selector_money">选择货币</string>
    <string name="selector_payment">选择支付方式(可多选)</string>
    <string name="margin">溢价</string>
    <string name="price">价格</string>
    <string name="min">最少交易</string>
    <string name="max">最大交易</string>
    <string name="payment">付款</string>
    <string name="push">发布</string>
    <string name="set_login_pw">设置登录密码</string>
    <string name="login_pw">登录密码</string>
    <string name="payment_pw">PIN密码</string>
    <string name="set_payment_pw">设置PIN密码</string>
    <string name="et_google_code">输入谷歌验证码</string>
    <string name="toast_google_code">谷歌验证码不能为空</string>
    <string name="up_for_cancel">手指上滑，取消发送</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>
    <string name="long_click_record">长按 录音</string>
    <string name="hang_up_finsh">松开 结束</string>
    <string name="release_cancel">松开 取消</string>
    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指 取消发送</string>
    <string name="get_code">谷歌验证不能为空</string>
    <string name="confirm">确定</string>
    <string name="selected_legal_tender">法币</string>
    <string name="selector_payment_time">选择付款期限</string>
    <string name="toast_coin">币种不能为空</string>
    <string name="toast_state">请选择国家</string>
    <string name="toast_legal_tender">请选择法币</string>
    <string name="toast_payment_time">请选择付款期限</string>
    <string name="toast_min_limit">请输入最小量</string>
    <string name="toast_max_limit">请输入最大量</string>
    <string name="count">数量</string>
    <string name="toast_username">用户名不能为空</string>
    <string name="search">搜索</string>
    <string name="remark">备注</string>
    <string name="google_verify">谷歌验证</string>
    <string name="bank_card">银行卡</string>
    <string name="delete">删除</string>
    <string name="please_bind_the_cardholders_bank_card">请绑定持卡人本人的银行卡</string>
    <string name="card_number">卡号</string>
    <string name="et_bank_card_number">请输入银行卡号</string>
    <string name="bank_card_information">银行卡信息</string>
    <string name="card_type">卡类型</string>
    <string name="opening_bank">开户行</string>
    <string name="et_opening_bank">请输入完整的银行卡开户行地址信息</string>
    <string name="cardholder">持卡人</string>
    <string name="id_number">证件号</string>
    <string name="detail">详情</string>
    <string name="question">帮助</string>
    <string name="receipt_of_transfer_record">没有转账记录</string>
    <string name="buy_btc">购买BTC</string>
    <string name="help">帮助</string>
    <string name="trading_limit">交易限额</string>
    <string name="buy_count">购买数量</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="buy_sell_hint1">1、交易请详细了解卖家的交易信息。 </string>
    <string name="buy_sell_hint2">2、请通过平台进行沟通协定，并保存好相关聊天信息。 </string>
    <string name="buy_sell_hint3">3、如遇到交易纠纷，请通过平台解决问题。 </string>
    <string name="transfer_record">转账记录</string>
    <string name="transfer_give">转账给</string>
    <string name="et_selecotr_coin">选择币种</string>
    <string name="confirm_transfer">确认转账</string>
    <string name="lrwmzpm">币币兑换</string>
    <string name="confirm_exchange">确认兑换</string>
    <string name="record">记录</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="create">创建</string>
    <string name="group_name">群名</string>
    <string name="et_group_name">请输入群名</string>
    <string name="invite_friend">邀请好友</string>
    <string name="et_comment">请输入评论</string>
    <string name="all_reviews">所有评论</string>
    <string name="expect_coin">期望币种</string>
    <string name="send_who">发送对象</string>
    <string name="et_expect_coin">请输入期望添加的币种</string>
    <string name="contact_information">联系方式</string>
    <string name="hint_unfinished">开发当中，敬请期待</string>
    <string name="vcode">验证码</string>
    <string name="last_step">上一步</string>
    <string name="google_Authenticator">谷歌身份验证器</string>
    <string name="download">下载</string>
    <string name="the_current_account">当前账号</string>
    <string name="copy">复制</string>
    <string name="binding">绑定</string>
    <string name="is_binding">已绑定</string>
    <string name="unbinding">解绑</string>
    <string name="send_email">发送邮件</string>
    <string name="red_package">红包</string>
    <string name="red_package_record">红包记录</string>
    <string name="grab_qr_red_hint">已存入钱包，可直接转账</string>
    <string name="guanyu_me">关于我们</string>
    <string name="guanwang">官网</string>
    <string name="check_update">检查更新</string>
    <string name="in_coin">充币</string>
    <string name="in_coin_hint">这是您的BTC充值地址，请将您的BTC转入此地址，务必备注您的注册电邮账号，填写错误将无法到账成功！ </string>
    <string name="in_coin_hint2">1.BTC转账需要BTC网络进行确认，每笔转账至少需要预0.05个BTC在原地址，达到3个确认后您的BTC会自动充值至您的账户之中;\n2 .禁止任何非BTC资产充值该地址，否则将无法到账为TPX资产，丢失将无法找回;\n3.您在操作BTC钱包向此地址转账时，请务必填写备注信息：！您的电邮账号，否则将无法到账\n4.请勿使用本地址做为挖矿地址，否则不能到账。 </string>
    <string name="login_record">登录记录</string>
    <string name="login_set">登录设置</string>
    <string name="login_set_hint">为了您的资金安全，请选择一种安全的登录验证模式</string>
    <string name="login_set1">每次登录都不需要验证</string>
    <string name="login_set2">每次登录进行电邮验证</string>
    <string name="login_set3">每次登录进行谷歌验证</string>
    <string name="required">必填</string>
    <string name="discover">发现</string>
    <string name="wallet">钱包</string>
    <string name="assets">资产</string>
    <string name="et_coin_name">请输入币种名称</string>
    <string name="new_friend">新的好友</string>
    <string name="no_receipt_in_coin_record">没有充币记录</string>
    <string name="no_receipt_out_coin_record">没有提币记录</string>
    <string name="buyer">买家</string>
    <string name="trading_money">交易金额</string>
    <string name="trading_count">交易数量</string>
    <string name="trading_price">交易价格</string>
    <string name="order_number">订单号</string>
    <string name="order_time">订单时间</string>
    <string name="order_close_hint">系统正在处理中....请耐心等待卖家放行</string>
    <string name="confirm_send_coin">确认放行</string>
    <string name="surplus">剩余</string>
    <string name="cancel_order">取消订单</string>
    <string name="confirm_payment">确认付款</string>
    <string name="trading_hint">交易提示</string>
    <string name="trading_hint2">1.场外交易中，买家的汇款将直接进入卖家账号，交易过程中卖家出售的数字资产将由平台托管。 \n2.请在规定时间内完成付款，并务必点击“确认付款”，卖家确认收款后，系统会将数字资产划转至您的账户。 \n3.请勿频繁取消订单，否则将导致限制交易。 \n4.打款前请务必根据对方提供的电邮、手机号或者TopperChat联系卖家，以免出现卖家一直未放行订单超时情况\n5.打款的时候可以把参考号发给卖家以便参看是哪笔交易\n6.请勿在汇款时备注敏感文字，如区块链，交易币等信息</string>
    <string name="order">订单</string>
    <string name="selector_coin">选择币种</string>
    <string name="push_ad">发布广告</string>
    <string name="out_coin">提币</string>
    <string name="send_site">发送地址</string>
    <string name="et_out_coin_site">输入或选择提币地址</string>
    <string name="selecotr_site">选择地址</string>
    <string name="payment_pw_error_hint">PIN密码错误，请重试！ </string>
    <string name="retry">重试</string>
    <string name="my_friend">我的好友</string>
    <string name="add_friend">添加好友</string>
    <string name="et_command">输入竞猜口令(4-8个数字)</string>
    <string name="guess_password_title">此竞猜为口令竞猜，请输入口令</string>
    <string name="et_title">输入标题</string>
    <string name="save">保存</string>
    <string name="transmit">转发</string>
    <string name="add_collect">添加收藏</string>
    <string name="et_url">输入网址</string>
    <string name="the_pulice">公众号</string>
    <string name="start_group">发起群聊</string>
</resources>