<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_msg_pop_shape"
    android:orientation="vertical"
    android:paddingRight="@dimen/x30"
    android:paddingLeft="@dimen/x30">

    <TextView
        android:id="@+id/pop_eth"
        style="@style/MainTextDeepStyle30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="@dimen/x30"
        android:drawableLeft="@mipmap/icon_chat_startgroupchat"
        android:gravity="center"
        android:text="@string/start_group"/>

    <TextView
        android:id="@+id/pop_etc"
        style="@style/MainTextDeepStyle30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="@dimen/x30"
        android:drawableLeft="@mipmap/icon_chat_myfriend"
        android:gravity="center"
        android:text="@string/my_friend"/>

    <TextView
        style="@style/MainTextDeepStyle30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="@dimen/x30"
        android:drawableLeft="@mipmap/icon_talk_add"
        android:gravity="center"
        android:text="@string/add_friend"/>
    <TextView
        style="@style/MainTextDeepStyle30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="@dimen/x30"
        android:drawableLeft="@mipmap/icon_thepublic1"
        android:gravity="center"
        android:text="@string/the_pulice"/>

</LinearLayout>