<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="@dimen/x600"
                android:layout_height="@dimen/x300"
                android:layout_gravity="center"
                android:background="@drawable/bg_white_shape"
                android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/MainTextDeepStyle36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/payment_pw_error_hint"/>

    <TextView
        android:id="@+id/tv_retry"
        style="@style/MainTextDeepStyle36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/y30"
        android:layout_marginLeft="@dimen/x300"
        android:text="@string/retry"/>

    <TextView
        android:id="@+id/tv_find_password"
        style="@style/BlueTextStyle36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/y30"
        android:layout_marginRight="@dimen/x30"
        android:text="@string/find_password"/>

</RelativeLayout>