<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#2B353F"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/find_password"
        android:textColor="@color/white"
        android:textSize="@dimen/x40"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y120"
        android:src="@mipmap/img_toco_logo"/>

    <LinearLayout
        android:id="@+id/ll_step_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y580"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/y20"
            android:background="@mipmap/img_forgot"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/x50"
            android:paddingRight="@dimen/x50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/x30"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y120"
                android:hint="@string/et_emily"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="28"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/x32"
                android:theme="@style/MyEditText"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="@dimen/x250"
            android:layout_height="@dimen/y100"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y20"
            android:background="@drawable/bg_blue_shape"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="@dimen/x35"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_step_tow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y580"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/y20"
            android:background="@mipmap/img_forgot"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/x50"
            android:paddingRight="@dimen/x50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/x30"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y120">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/x32"
                    android:theme="@style/MyEditText"/>

                <ImageView
                    android:id="@+id/iv_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="@dimen/x20"
                    android:paddingRight="@dimen/x20"
                    android:paddingTop="@dimen/x20"
                    android:src="@drawable/password_selector"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y20"
                android:text="@string/vcode"
                android:textSize="@dimen/x30"/>

            <EditText
                android:id="@+id/et_email_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y120"
                android:hint="@string/et_vcode"
                android:inputType="number"
                android:lines="1"
                android:maxLength="20"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/x32"
                android:theme="@style/MyEditText"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x30"
            android:paddingRight="@dimen/x30">

            <Button
                android:id="@+id/btn_last_step"
                android:layout_width="@dimen/x250"
                android:layout_height="@dimen/y100"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/y20"
                android:background="@drawable/bg_blue_shape"
                android:text="@string/last_step"
                android:textColor="@color/white"
                android:textSize="@dimen/x35"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/x250"
                android:layout_height="@dimen/y100"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/y20"
                android:background="@drawable/bg_blue_shape"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/x35"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>