<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/shallow_gray"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="@color/white">


        <ImageView
            android:id="@+id/bark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/x20"
            android:src="@mipmap/icon_nav_return"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_collect"
            android:textColor="@color/black"
            android:textSize="@dimen/x32"/>

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/x28"
            android:textColor="@color/blue2"
            android:gravity="center"
            android:padding="@dimen/x20"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <TextView
        style="@style/HCutOffRule"/>

    <com.bclould.tea.ui.widget.ClearEditText
        android:id="@+id/et_titles"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:textSize="@dimen/x28"
        android:singleLine="true"
        android:hint="@string/et_title"
        android:textColor="@color/black"
        android:paddingLeft="@dimen/x30"
        android:paddingRight="@dimen/x30"
        android:background="@color/white"/>

    <TextView
        style="@style/HCutOffRule"/>

    <com.bclould.tea.ui.widget.ClearEditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:textSize="@dimen/x28"
        android:singleLine="true"
        android:hint="@string/et_url"
        android:textColor="@color/black"
        android:paddingLeft="@dimen/x30"
        android:paddingRight="@dimen/x30"
        android:background="@color/white"/>

</LinearLayout>