<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x600"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_shape"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:background="@android:color/transparent"
            android:text="@string/copy"
            style="@style/BlueTextStyle28"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tv_line"
            style="@style/HorizontalDeepBoundaryStyle"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_transmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:background="@android:color/transparent"
            android:text="@string/transmit"
            style="@style/BlueTextStyle28"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_line1"
            style="@style/HorizontalDeepBoundaryStyle"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:background="@android:color/transparent"
            android:text="@string/delete"
            style="@style/BlueTextStyle28"/>
    </LinearLayout>

</LinearLayout>